# neurosym-lib

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CNAME  Dockerfile  Makefile  README.html  README.md  bouncing_ball_exercise_skeleton.html  bouncing_ball_exercise_solutions.html  discrete_exercise_skeleton.html  discrete_exercise_solutions.html  flyvfly_analysis.md  genindex.html  heirarchical_near.hs  list_best_nodes.pkl  near_demo_classification.html  near_demo_regression.html  near_demo_regression_solution.html  near_demo_regression_solutions.html  neurosym.yml  objects.inv  old_list_best_nodes.pkl  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  variables.md
_sources/: README.md  bouncing_ball_exercise_skeleton.ipynb  bouncing_ball_exercise_solutions.ipynb  discrete_exercise_skeleton.ipynb  discrete_exercise_solutions.ipynb  near_demo_classification.ipynb  near_demo_regression.ipynb  near_demo_regression_solution.ipynb  near_demo_regression_solutions.ipynb
docs/: Makefile  make.bat
ecg_demo/: ecg_iter.py  nn_train.py  sklearn_train.py
experiments/: osg_astar_mice_results.ipynb  osg_astar_mice_results.json  osg_astar_mice_timing.py
lilo/: .gitignore  Dockerfile  README.md  environment.yml  precompute_embeddings.py  requirements.txt  run_experiment.py  run_iterative_experiment.py
neurosym/: __init__.py
notebooks/: benchmark_mice.py  compression-enumeration-algorithm-results.ipynb  crim13replication-near-algorithm-results.ipynb  get_ecg_datasets.ipynb  get_near_datasets.ipynb  (+1 more)
(+1896 files in other folders)
