[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosym-lib"
version = "0.1.0"
description = "Neurosymbolic library."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
  { name = "Kavi Gupta", email = "kavig+neurosym@mit.edu" },
  { name = "Atharva Sehgal" },
  { name = "Maddy Bowers" },
  { name = "Armando Solar-Lezama" },
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

dependencies = [
  "frozendict==2.3.8",
  "torch",
  "torchvision",
  "torchaudio",
  "numpy",
  "lightning",
  "permacache",
  "requests",
  "stitch-core==0.1.27",
  "scikit-learn",
  "s-exp-parser==1.4.0",
  "no_toplevel_code==1.0.0",
  "ast-scope==0.5.2",
  "pathos==0.3.2",
]

[project.urls]
Homepage = "https://github.com/kavigupta/neurosym-lib"

[tool.setuptools.packages.find]
include = ["*"]

[dependency-groups]
test = [
  "pytest",
  "parameterized",
  "matplotlib", # needed for tutorial test
  "sphobjinv",
]
lint = [
  "ruff>=0.11.5",
  "sphobjinv",
]
docs = [
  "sphinx==7.1.2",
  "sphinx-rtd-theme==1.3.0rc1",
  "sphobjinv",
  "tomli; python_version < '3.11'",
]
dev = [
    "pre-commit>=4.3.0",
]
